src/test/ui/out-of-order-shadowing.stderr
error: `bar` is already in scope
  --> $DIR/out-of-order-shadowing.rs:15:1
   |
LL | define_macro!(bar);
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: macro-expanded `macro_rules!`s may not shadow existing macros (see RFC 1560)
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

